public/style.css
html, body, #game-container, .canvas-container {
	width:100vw;
	height:100vh;
	overflow-x:hidden;
	overflow-y:hidden;
	margin:0;
	padding:0;
	transform-origin: top left;
	position: relative;
	background-color: black;
}

* {
	font-family: 'Press Start 2P', cursive;
	color: white;
	background-color: transparent;
}

.canvas-container{
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
}

.screen {
	position:fixed;
	width: 100vw;
	height: 100vh;
	background-color: black;
	top:0;
	left:0;
	z-index: 10;
}

.menu {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.menu .icon {
	height: 200px;
	image-rendering: pixelated;
}

button {
	background:none;
	border:none;
	color:white;
	margin: 50px;
	font-size: 2em;
	cursor: pointer;
}

canvas {
	image-rendering: pixelated;
}

.hud {
	position: absolute;
	display: flex;
	flex-direction: row;
	top:0;
	left:0;
	height: 100vh;
	width: 100vw;
	z-index: 1;
}

.spacer{
	flex-grow: 1;
}

.health, .score{
	color:white;
}

.game-over, .intro, .credits{
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;;
}

.game-over > * {
	display: inline;
	margin: 50px;
	text-align: center;
}

.game-over button{
	font-size: 1.5em;
}

.begar {
	width: 75px;
	image-rendering: pixelated;
}

.intro>* {
	max-width: 500px;
}

.credits{
	justify-content: start;
}

.credits>.content {
	animation-name: credits-animation;
	animation-duration: 45s;
	animation-timing-function: linear;
	animation-iteration-count: infinite;
}

@keyframes credits-animation{
	from {
		transform: translate(0, 100vh);
	}
	to {
		transform: translate(0, 100vh);
		transform: translate(0, -100%);
	}
}

.credits>.content>*{
	margin: 50px;
	max-width: 500px;
}

.credit * {
	text-align: center;
	margin: 15px;
}

.credit > .content>.what{
	font-size: 1.2em;

}

.credits button{
	position:fixed;
	right: 0;
	bottom: 0;
}

.heart{
	width: 64px;
	image-rendering: pixelated;
}

button:active{
	outline: none;
}

